# juul_document_analysis

./: .gitignore  Age verification keyword extraction.ipynb  BERT_NER.ipynb  Email_cleanup.ipynb  Influencer.ipynb  JUUL_Document_Retrieval.ipynb  JUUL_Document_Retrieval_using_SOLR_API.ipynb  JUUL_Email_Time_Series.ipynb  JUUL_Employee_Network_Analysis.ipynb  JUUL_External_Network_Analysis.ipynb  NER_and_keyword_extraction_Emails.ipynb  README.md  Survey_Sentiment_analysis_WIP.ipynb  docker-compose.yaml  example_industry_docs_search.ipynb  filter_dfs.ipynb  index.md  pyproject.toml  sample_ids.txt  ucsf_api.ipynb  ucsf_api.py
CSVs/: JUUL employee list.csv  Top 50 nodes by Betweeness Centrality.csv  Top 50 nodes by In-degree Centrality.csv  Top 50 nodes by Out-degree Centrality.csv  ids_influencer_search.csv  juul_pax_ploom employee details.csv
Final code notebooks/: JUUL_Document_Retrieval_using_SOLR_API.ipynb  JUUL_Employee_Network_Analysis.ipynb  JUUL_External_Network_Analysis.ipynb  JUUL__Email_Time_Series.ipynb  NER_and_keyword_extraction_Emails.ipynb
Jupyter/: JUUL_Document_Retrieval.ipynb  JUUL_Retrieve_Documents.ipynb  JUUL_Video_Transription_Draft.ipynb  JUUL_rag_model.ipynb  NER_and_keyword_extraction_Emails.ipynb  documents_tutorial.ipynb  juul_stitching_slack_messages.ipynb  long_vid_transcription.ipynb
Jupyter/updated/: JUUL_NER_and_keyword_extraction_Emails.ipynb  JUUL_create_type_dataset.ipynb  JUUL_long_vid_transcription.ipynb  JUUL_stitching_slack_messages.ipynb  JUUL_using_python_wrapper.ipynb
Output/: Top 50 nodes by Closeness Centrality.csv  Top 50 nodes by Degree Centrality.csv
html/: JUUL_Email_Time_Series.html  JUUL_Retrieve_Documents.html  JUUL_create_type_dataset.html  JUUL_long_vid_transcription.html  JUUL_stitching_slack_messages.html  JUUL_using_python_wrapper.html  NER_and_keyword_extraction_Emails.html
juul api/: test_ucsf_api.py  ucsf_api.ipynb  ucsf_api.py
src/: db.py  util.py
test/: test_ucsf_api.py
(+1 files in other folders)
