[project]
name = "juul-document-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "polars>=1.7.1",
    "plotly>=5.24.1",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "nbformat>=5.10.4",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "altair>=5.4.1",
    "transformers>=4.45.1",
    "torch>=2.4.1",
    "adbc-driver-manager>=1.2.0",
    "adbc-driver-postgresql>=1.2.0",
    "connectorx>=0.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
